examibur/src/main/resources/public/css/custom.css
.container .row {
	margin-left: 0;
	margin-right: 0;
}

.dropdown-menu > li > a {
	background-color: inherit;
	border: none;
	text-align: left;
}

.dropdown-menu input {
	background-color: inherit;
}

.navbar-brand {
	padding-top: 3px;
}

.navbar-brand > img {
	display: inline-block;
	width: 45px;
}

.tab-body {
	padding: 15px 15px 0 15px;
	border-left: 1px solid #dde3ea;
	border-right: 1px solid #dde3ea;
	border-bottom: 1px solid #dde3ea;
	margin-bottom: 25px;
}

main > header {
	padding-left: 15px;
	padding-right: 15px;
}

.input-group {
	margin-bottom: 10px;
}

footer {
	padding-top: 12px;
	border-top: 1px solid #ddd;
}

.breadcrumb {
	margin-bottom: 0;
}

.top-navigation {
	padding-bottom: 7px;
}

td.td-ellipsis {
	max-width: 370px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.no-export {
	display: none;
}

